gccida/g1/df_ref_record
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_ref_record/src/df.c:1326:69: error: must use 'enum' tag to refer to type 'df_ref_type'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                    ^
                                                                    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_ref_record/src/df.c:1326:91: error: must use 'enum' tag to refer to type 'df_ref_flags'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                                          ^
                                                                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_ref_record/src/df.c:1344:34: error: invalid suffix 'xmode' on integer constant
if ( v16 >= mode_size[*(short *)0xmode] && v16 < mode_size[*( unsigned __int8 *)( reg->fld[0].rtwint + 2)] 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_ref_record/src/df.c:1345:19: error: expected expression
|| ( loc = ( rtx *)reg->fld, rtx = reg->fld[0].rtx, *( _WORD *)rtx == 63) ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_ref_record/src/df.c:1364:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)rtx + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_ref_record/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/df_ref_record/src/obj/df.o] Error 1
